fixed reservations not showing

--- a/frontend/src/components/ListingShow/ListingReservationTool/ListingReservationTool.css
+++ b/frontend/src/components/ListingShow/ListingReservationTool/ListingReservationTool.css
@@ -7,6 +7,7 @@
 	box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
 	position: sticky;
 	top: 200px;
+	margin-bottom: 48px;
 }
 
 #rt_wrapper {
