--- a/frontend/src/components/ListingShow/ListingShow.css
+++ b/frontend/src/components/ListingShow/ListingShow.css
@@ -144,6 +144,7 @@
 	align-items: center;
 	justify-content: center;
 	font-size: 28px;
+	user-select: none;
 }
 
 #lsp_listing_description { 
