--- a/frontend/src/components/Reviews/IndividualReview/IndividualReview.css
+++ b/frontend/src/components/Reviews/IndividualReview/IndividualReview.css
@@ -8,7 +8,7 @@
 	height: 100%;
 	width: 100%;
 	display: flex; 
-	flex-direction: row; 
+	flex-direction: column; 
 	padding: 14px;
 }
 
